@@ -1,5 +1,5 @@
 Impact Impact Impact  Arial Arial Arial  Webdings Webdings Webdings  Verdana Verdana Verdana  CourierNew CourierNew CourierNew  Bimini Bimini Bimini 
 --------
-font
-color
 TextFormat
+color
+font
