@@ -258,6 +258,8 @@ Unreleased changes (1.0-dev)
 
 94. NUTCH-641 - IndexSorter inorrectly copies stored fields (ab)
 
+95. NUTCH-645 - Parse-swf unit test failing (ab)
+
 
 Release 0.9 - 2007-04-02
 
